# Cerberus-Protocol

./: README.md
cerberus/: Anchor.toml  Cargo.toml  errors.md  package.json
cerberus/programs/cerberus/: Cargo.toml
cerberus/programs/cerberus/src/: constants.rs  errors.rs  events.rs  lib.rs
cerberus/programs/cerberus/src/Instructions/: add_root.rs  claim.rs  initialize_distributor.rs  mod.rs  update_authority.rs  withdraw.rs
cerberus/programs/cerberus/src/states/: config.rs
cerberus/tests/: cerberus.ts
